# PenguinFinder

./: .gitignore  README.md  label_encoder.pkl  main.py  penguin_rf_model.pkl  pyproject.toml  requirements.txt  rf_model.ipynb
static/: style.css
templates/: index.html
