[project]
name = "penguin-finder"
version = "0.1.0"
description = "FastAPI app that predicts penguin species from Palmer Penguins measurements."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.124.4",
  "requests==2.32.5",
  "uvicorn==0.38.0",
  "pandas==2.3.3",
  "scikit-learn==1.7.2",
  "scipy==1.16.2",
  "seaborn==0.13.2",
  "matplotlib==3.10.6",
  "jinja2>=3.1.6",
]
